do not pad screenshots causing ugly scrollbars (bug 745113)

--- a/media/css/devreg/manage.less
+++ b/media/css/devreg/manage.less
@@ -111,7 +111,7 @@
         max-width: 530px;
         word-wrap: break-word;
     }
-    table .trans {
+    table .prose .trans {
         max-height: 250px;
         padding-right: 15px;
         overflow: auto;
